pamc/src/tests/sample_code/should_succeed/should_parse/use/alternate_name.ph
use mod as lorem;
use mod.foo as lorem;
use mod.foo.bar as lorem;

use super as lorem;
use super.foo as lorem;
use super.foo.bar as lorem;

use super2 as lorem;
use super2.foo as lorem;
use super2.foo.bar as lorem;

use super8 as lorem;
use super8.foo as lorem;
use super8.foo.bar as lorem;

use pack as lorem;
use pack.foo as lorem;
use pack.foo.bar as lorem;

use foo as lorem;
use foo.bar as lorem;
use foo.bar.baz as lorem;

pub use mod as lorem;
pub use mod.foo as lorem;
pub use mod.foo.bar as lorem;

pub use super as lorem;
pub use super.foo as lorem;
pub use super.foo.bar as lorem;

pub use super2 as lorem;
pub use super2.foo as lorem;
pub use super2.foo.bar as lorem;

pub use super8 as lorem;
pub use super8.foo as lorem;
pub use super8.foo.bar as lorem;

pub use pack as lorem;
pub use pack.foo as lorem;
pub use pack.foo.bar as lorem;

pub use foo as lorem;
pub use foo.bar as lorem;
pub use foo.bar.baz as lorem;

pub(pack.foo.bar) use mod as lorem;
pub(pack.foo.bar) use mod.foo as lorem;
pub(pack.foo.bar) use mod.foo.bar as lorem;

pub(pack.foo.bar) use super as lorem;
pub(pack.foo.bar) use super.foo as lorem;
pub(pack.foo.bar) use super.foo.bar as lorem;

pub(pack.foo.bar) use super2 as lorem;
pub(pack.foo.bar) use super2.foo as lorem;
pub(pack.foo.bar) use super2.foo.bar as lorem;

pub(pack.foo.bar) use super8 as lorem;
pub(pack.foo.bar) use super8.foo as lorem;
pub(pack.foo.bar) use super8.foo.bar as lorem;

pub(pack.foo.bar) use pack as lorem;
pub(pack.foo.bar) use pack.foo as lorem;
pub(pack.foo.bar) use pack.foo.bar as lorem;

pub(pack.foo.bar) use foo as lorem;
pub(pack.foo.bar) use foo.bar as lorem;
pub(pack.foo.bar) use foo.bar.baz as lorem;
