pamc/src/tests/sample_code/should_fail/multi_file/bind/visibility_not_global_or_non_strict_ancestor/src/mod.ph
mod nat;
use nat.Nat.*;

pub(pack.nat) let _3 = S(S(S(O)));
